--- a/index.html
+++ b/index.html
@@ -7,8 +7,8 @@
   <link rel="stylesheet" href="styles.css">
 </head>
 <body class="container">
-  <h1>Ye Olde Front-End Theatre</h1>
-  <p>Cupcake ipsum dolor sit amet. Donut topping croissant sesame snaps wafer marzipan cake sweet roll. Fruitcake caramels pudding jelly beans jelly apple pie. Bear claw candy brownie caramels halvah brownie powder. Fruitcake fruitcake sesame snaps candy canes bonbon donut chupa chups pastry. Gummi bears brownie topping tart gingerbread danish.</p>
+  <h1>The Not-Fox Theater</h1>
+  <p> Choose an avaliable seat from chart.</p>
 
   <section class="seat-chart">
     <!-- This section will contain seats with one of two classes. Eventually, the divs will be generated with JavaScript! Keep this in mind when making decisions about the layout. -->
@@ -19,8 +19,29 @@
     <div class="reserved"></div>
     <div class="available"></div>
     <div class="reserved"></div>
-  </section>
-
+    <div class="reserved"></div>
+    <div class="available"></div>
+    <div class="reserved"></div>
+    <div class="available"></div>
+    <div class="reserved"></div>
+    <div class="available"></div>
+    <div class="reserved"></div>
+    <div class="reserved"></div>
+    <div class="available"></div>
+    <div class="reserved"></div>
+    <div class="available"></div>
+<div class="reserved"></div>
+    <div class="available"></div>
+    <div class="reserved"></div>
+    <div class="available"></div>
+    <div class="reserved"></div>
+    <div class="available"></div>
+   </section>
+   <footer>
+     <p>Address: 12345 Idontknow</p>
+     <p>City: Not-Detriot</p>
+     <p>Zip: 45632</p>
+   </footer>
   <script src="http://code.jquery.com/jquery-1.11.3.min.js"></script>
   <script type="text/javascript" src="app.js"></script>
 </body>
