add images folder; add CSS

--- a/index.html
+++ b/index.html
@@ -7,9 +7,10 @@
   <link rel="stylesheet" href="styles.css">
 </head>
 <body class="container">
-  <h1>The Not-Fox Theater</h1>
-  <p> Choose an avaliable seat from chart.</p>
-
+  <header>
+    <h1 class="center-text">The Not-Fox Theater</h1>
+    <p class="center-text"> Choose an avaliable seat from chart.</p>
+  </header>
   <section class="seat-chart">
     <!-- This section will contain seats with one of two classes. Eventually, the divs will be generated with JavaScript! Keep this in mind when making decisions about the layout. -->
     <div class="reserved"></div>
@@ -30,7 +31,7 @@
     <div class="available"></div>
     <div class="reserved"></div>
     <div class="available"></div>
-<div class="reserved"></div>
+    <div class="reserved"></div>
     <div class="available"></div>
     <div class="reserved"></div>
     <div class="available"></div>
