--- a/index.html
+++ b/index.html
@@ -6,10 +6,10 @@
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css">
   <link rel="stylesheet" href="styles.css">
 </head>
-<img src="images/foxlogo.jpg" alt="logo">
+
 <body class="container">
   <header>
-    <h1 class="center-text">The Not-Fox Theater</h1>
+    <img src="images/foxlogo.jpg" alt="The Not-Fox Theater">
     <p class="center-text"> Choose an avaliable seat from chart.</p>
   </header>
   <section class="seat-chart">
