--- a/index.html
+++ b/index.html
@@ -7,12 +7,14 @@
   <link rel="stylesheet" href="styles.css">
 </head>
 
-<body class="container">
+<body>
   <header>
-    <img src="images/foxlogo.jpg" alt="The Not-Fox Theater">
-    <p class="center-text"> Choose an avaliable seat from chart.</p>
+    <div class="container">
+      <img src="images/foxlogo.jpg" alt="The Not-Fox Theater">
+      <p class="center-text"> Choose an avaliable seat from chart.</p>
+    </div>  
   </header>
-  <section class="seat-chart">
+  <section class="seat-chart container">
     <!-- This section will contain seats with one of two classes. Eventually, the divs will be generated with JavaScript! Keep this in mind when making decisions about the layout. -->
     <div class="reserved"></div>
     <div class="available"></div>
@@ -40,9 +42,11 @@
     <div class="available"></div>
    </section>
    <footer>
-     <p>Address: 12345 Idontknow</p>
-     <p>City: Not-Detriot</p>
-     <p>Zip: 45632</p>
+    <div class="container">
+       <p>Address: 12345 Idontknow</p>
+       <p>City: Not-Detriot</p>
+       <p>Zip: 45632</p>
+      </div> 
    </footer>
   <script src="http://code.jquery.com/jquery-1.11.3.min.js"></script>
   <script type="text/javascript" src="app.js"></script>
