change color scheme, add borders to header & footer

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
   <header>
     <div class="container">
       <img src="images/foxlogo.jpg" alt="The Not-Fox Theater">
-      <p class="center-text"> Choose an avaliable seat from chart.</p>
+      <p class="center-text"> ~ Choose an avaliable seat from chart ~</p>
     </div>  
   </header>
   <section class="seat-chart container">
@@ -43,8 +43,8 @@
    </section>
    <footer>
     <div class="container">
-       <p>Address: 12345 Idontknow</p>
-       <p>City: Not-Detriot</p>
+       <p>Address: 12345 Woodward</p>
+       <p>City: Detroit</p>
        <p>Zip: 45632</p>
       </div> 
    </footer>
