added border to seat section;added seat indicator; changed colors

--- a/index.html
+++ b/index.html
@@ -10,10 +10,21 @@
 <body>
   <header>
     <div class="container">
-      <img src="images/foxlogo.jpg" alt="The Not-Fox Theater">
-      <p class="center-text"> ~ Choose an avaliable seat from chart ~</p>
-    </div>  
+      <img src="images/foxlogo.jpg" alt="The Not-Fox Theater">    
   </header>
+
+  <section id="color-bar"></section>
+  
+  <section id="info">
+    <div class="container">
+      <p class="center-text">Please select a seat</p>
+        <ul>
+          <li>available seat</li>
+          <li>reserved seat</li>
+        </ul>
+    </div>
+  </section>
+
   <section class="seat-chart container">
     <!-- This section will contain seats with one of two classes. Eventually, the divs will be generated with JavaScript! Keep this in mind when making decisions about the layout. -->
     <div class="reserved"></div>
